# Algorithm-Practice

./: .gitignore  README.md
01DynamicProg/: README.md
01DynamicProg/01PackProblem/: CMakeLists.txt  README.md  main.cpp
01DynamicProg/01PackProblem/solve/: CMakeLists.txt  PackProblem.cpp  PackProblem.h
01DynamicProg/02ViterbiAlgo/: README.md  main.py
01DynamicProg/03CompletePackProblem/: main.py
01DynamicProg/04ChangeCoins/: main.py
01DynamicProg/05ChangeCoinsII/: main.py
01DynamicProg/06MinEditDistance/: main.py
02GreedyAlgo/01MinimumSpanTree/: 01Kruskal.py  README.md
03BackTracking/: README.md
03BackTracking/02Permutations/: README.md
03BackTracking/03SubsetSum/: README.md
03BackTracking/04NQueens/: main.cpp
03BackTracking/05DiyHtop/: main.py
03BackTracking/例题1/: CMakeLists.txt  main.cpp
03BackTracking/例题2/: main.cpp
03BackTracking/例题3/: CMakeLists.txt  main.cpp
03BackTracking/例题3/preOrder/: CMakeLists.txt  preOrder.cpp
03BackTracking/整体框架/: main.cpp
04DivideConquer/: README.md
04DivideConquer/01BinarySearch/: main.cpp
04DivideConquer/02ConstructBinaryTree/: main.cpp
04DivideConquer/03Hanota/: CMakeLists.txt  main.cpp
05Graph/: README.md
05Graph/01BasicOperationsAdjMat/: CMakeLists.txt  main.cpp
05Graph/02BasicOperationsAdjTable/: main.cpp
05Graph/03BFSAdjTable/: CMakeLists.txt  main.cpp
05Graph/04DFSAdjTable/: main.cpp
06Heap/: README.md
06Heap/01Heap/: CMakeLists.txt  main.cpp
07Tree/: README.md
07Tree/01BinarySearchTree/: main.cpp
07Tree/02AVL/: CMakeLists.txt  main.cpp
08Search/: 01binarySearch.py
(+61 files in other folders)
